# arqtic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  architecture.py  config.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
dashboard/: app.py
dashboard/components/: current.py  forecast_tab.py  quality.py  trends.py
forecast/: predict.py
notebook/: presentation.ipynb
pipeline/: __main__.py  extract.py  load.py  quality.py  run.py  transform.py
terraform/: artifact_registry.tf  dashboard.tf  iam.tf  outputs.tf  pipeline.tf  provider.tf  storage.tf  terraform.tfvars  variables.tf
terraform/tests/: main.tftest.hcl
tests/: test_integration.py  test_quality.py  test_transform.py
